# Feathr

./: .gitignore  README.md  SUPPORT.md
.github/workflows/: main_feathrregistry.yml  maturin.yml
feathr-rs/: .gitignore  Cargo.toml  README.md
feathr-rs/.github/workflows/: rust.yml
feathr-rs/src/: client.rs  error.rs  feature.rs  feature_builder.rs  feature_query.rs  job_config.rs  lib.rs  materialization.rs  model.rs  observation.rs  project.rs  source.rs  utils.rs  var_source.rs
feathr-rs/src/job_client/: azure_synapse.rs  databricks.rs  mod.rs
feathr-rs/src/livy_client/: azure_synapse.rs  error.rs  mod.rs  models.rs
feathr-rs/src/registry_client/: feathr_api_client.rs  mod.rs
feathr-rs/src/registry_client/api_models/: attributes.rs  edge.rs  entity.rs  mod.rs
feathr-rs/template/: feathr_pyspark_driver_template.py.hbr
feathr-rs/test-script/: feathr_config.yaml  pyspark-test.py  testudf.py
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs  utils.rs
python/test-script/: feathr_config.yaml  feathrs_e2e.py  quick-start.ipynb  test.ipynb
registry/: .gitignore  API-spec.md  Cargo.toml  Dockerfile  README.md
registry/.github/workflows/: main_feathrregistry.yml
registry/auth/: Cargo.toml
registry/auth/src/: lib.rs  token.rs
registry/common-utils/: Cargo.toml
registry/common-utils/src/: lib.rs
registry/feathr-registry/: Cargo.toml
registry/feathr-registry/src/: main.rs  spa_endpoint.rs
registry/raft-registry/: Cargo.toml
registry/raft-registry/src/: app.rs  client.rs  lib.rs  rbac_middleware.rs
registry/raft-registry/src/network/: api_v1.rs  api_v2.rs  management.rs  mod.rs  raft.rs  raft_network_impl.rs  sequencer.rs
registry/raft-registry/src/store/: config.rs  mod.rs  store.rs
registry/registry-api/: Cargo.toml
registry/registry-api/src/: api_provider.rs  error.rs  lib.rs
registry/registry-api/src/api_models/: attributes.rs  edge.rs  entity.rs  mod.rs  rbac.rs
registry/registry-cli/: Cargo.toml
registry/registry-provider/: Cargo.toml
registry/registry-provider/src/: error.rs  fts.rs  lib.rs  rbac_provider.rs  registry.rs
registry/registry-provider/src/models/: attributes.rs  edge.rs  entity.rs  entity_def.rs  entity_prop.rs  mod.rs
registry/scripts/: mssql.sql  mysql.sql  postgres.sql  sqlite.sql
registry/sql-provider/: Cargo.toml
registry/sql-provider/src/: db_registry.rs  fts.rs  lib.rs  mock.rs  rbac_map.rs  serdes.rs
registry/sql-provider/src/database/: mod.rs  mssql.rs  sqlx.rs
registry/test-data/: sample.json  test-cluster.sh
