[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "feathrs"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Source Code" = "https://github.com/Azure/Feathr"
Issues = "https://github.com/Azure/Feathr/issues"

[tool.feathr]
target_version = ['py37', 'py38', 'py39', 'py310']
