[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["chrono"] }
thiserror = "1"
futures = "0.3"
tokio = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
async-trait = "0.1"
lazy_static = "1"
openssl = "0.10"
jsonwebtoken = "8"
common-utils = { path = "../common-utils" }
