[package]
name = "feathr-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
poem = { version = "1", features = ["static-files"] }
poem-openapi = { version = "2", features = ["static-files", "swagger-ui"] }
percent-encoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
clap = { version = "3", features = ["derive", "env"] }
openraft = { git = "https://github.com/windoze/openraft.git", features = ["serde"] }

common-utils = { path = "../common-utils" }
registry-provider = { path = "../registry-provider" }
sql-provider = { path = "../sql-provider" }
registry-api = { path = "../registry-api" }
raft-registry = { path = "../raft-registry" }

openssl = { version = "0.10", features = ["vendored"] }