[package]
name = "raft-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
clap = { version = "3", features = ["derive", "env"] }
tokio = { version="1.0", default-features=false, features=["sync"] }
tracing = "0.1"
tracing-futures = "0.2"
sled = "0.34"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
poem = { version = "1", features = ["static-files"] }
poem-openapi = { version = "2", features = ["static-files", "swagger-ui"] }
openraft = { git = "https://github.com/windoze/openraft.git", features = ["serde"] }
common-utils = { path = "../common-utils" }
registry-provider = { path = "../registry-provider" }
sql-provider = { path = "../sql-provider" }
registry-api = { path = "../registry-api" }
auth = { path = "../auth" }