[package]
name = "registry-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
poem = { version = "1", features = ["static-files"] }
poem-openapi = { version = "2", features = ["static-files", "swagger-ui", "chrono"] }
common-utils = { path = "../common-utils" }
registry-provider = { path = "../registry-provider" }
sql-provider = { path = "../sql-provider" }